fix: layout bug

--- a/2023thef2e/mission1/sass/_global.scss
+++ b/2023thef2e/mission1/sass/_global.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .justify-content-right {
-    justify-content: right;
+    justify-content: flex-end;
 }
 
 .justify-content-around {
